# practicaAlternativaMH

./: CMakeLists.txt  README.md  mejoraPuebloExpl.cc  puebloExpl.cc  puebloExplBL.cc
results_mejoraPuebloExpl/: results_10_10.txt  results_10_30.txt  results_11_10.txt  results_11_30.txt  results_12_10.txt  results_12_30.txt  results_13_10.txt  results_13_30.txt  results_14_10.txt  results_14_30.txt  results_15_10.txt  results_15_30.txt  results_16_10.txt  results_16_30.txt  results_17_10.txt  results_17_30.txt  results_18_10.txt  results_18_30.txt  results_19_10.txt  results_19_30.txt  results_1_10.txt  results_20_10.txt  results_20_30.txt  results_21_10.txt  results_21_30.txt  results_22_10.txt  results_22_30.txt  results_23_10.txt  results_23_30.txt  results_24_10.txt  results_24_30.txt  results_25_10.txt  results_25_30.txt  results_26_10.txt  results_26_30.txt  results_27_10.txt  results_27_30.txt  results_28_10.txt  results_28_30.txt  results_29_10.txt  (+21 more)
results_puebloExpl/: results_10_10.txt  results_10_30.txt  results_11_10.txt  results_11_30.txt  results_12_10.txt  results_12_30.txt  results_13_10.txt  results_13_30.txt  results_14_10.txt  results_14_30.txt  results_15_10.txt  results_15_30.txt  results_16_10.txt  results_16_30.txt  results_17_10.txt  results_17_30.txt  results_18_10.txt  results_18_30.txt  results_19_10.txt  results_19_30.txt  results_1_10.txt  results_1_30.txt  results_20_10.txt  results_20_30.txt  results_21_10.txt  results_21_30.txt  results_22_10.txt  results_22_30.txt  results_23_10.txt  results_23_30.txt  results_24_10.txt  results_24_30.txt  (+30 more)
(+61 files in other folders)
